@@ -92,13 +92,21 @@ helpDescriptionColor: '6'
 maxHologramLines: 10 
 
 # This is used to configure if player names should be changed (display the team name of a player above their head
-# If the value is false, the team name will not be dispalyed
+# - If the value is false, the team name will not be dispalyed
 # - If the value is true, the team name will be displayed as a prefix (for backwards compatibility)
 # - If the value is prefix, the team name will be displayed before the player name
 # - If the value is suffix, the team name will be displayed after the player name 
 #
 # Possible values: [true, false, prefix, suffix]
 displayTeamName: prefix
+
+#This is used to configure if the help messages are fully custom or the automatically generated messages by the plugin 
+# - If this is false, /team help and /teama help will only display commands a user has permission for
+# - If this is true, the help message will be fetched from a file (which will be created the first time you reload the plugin after setting the value to be true) 
+# - If you are using a file, it will be found in the same folder as this file
+#
+# Possible values: [true, false]
+fullyCustomHelpMessages: false
 
 # Do not edit this value, this is used to check the config is up to date with the lastest version of the plugin (if it is not, it will be automatically updated)
 version: 2
